# cmake-mongoose

./: CMakeLists.txt  LICENSE  README.md  toolchain-gc65xx.cmake
src/: http_server.c  http_server.h  iotng.c  iotng.h  log.c  log.h  mongoose.h  mongoose_config.h  mqtt_client.c  mqtt_client.h  util.c  util.h
